# selbalMM

./: README.md  pyproject.toml  setup.cfg  setup.py
selbalMM/: __init__.py  core.py  selbal.py  selbalMM.py
selbalMM/test/: test.py
src/selbalMM/: core.py  selbalMM.py  test.py
