[metadata]
name = selbalMM
version = 0.0.1
author = Daniel Ian McSkimming
author_email = dmcskimming@usf.edu
description = Select compositional balances using mixed models.
long_description  =  file: README.md
long_description_content_type = text/markdown
url = https://github.com/dmcskim/selbalMM
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
	
[options]
packages = 
	selbalMM
python_requires = >=3.6

